# family-tree

./: .gitignore  Cargo.toml  docker-compose.yml  makefile  package.json
apps/client/: index.html  package.json  pnpm-lock.yaml
apps/client/src/: App.tsx  auth.tsx  main.tsx  routeTree.gen.ts
apps/client/src/components/: app-sidebar.tsx  icons.tsx  landing-header.tsx  landing.tsx  login-form.tsx  register-form.tsx
apps/client/src/components/ui/: nav-user.tsx
apps/client/src/models/: auth.ts  shared.ts
apps/client/src/routes/: __root.tsx  _auth.tsx  index.tsx  login.tsx  register.tsx
apps/server/: Cargo.toml
apps/server/migrations/: 20250319203732_new_users.sql  20250320202830_new_fields_to_user.sql  20250320204511_new_fields_to_user_2.sql  20250322112832_make_verified_as_bool.sql
apps/server/src/: authenticate_token.rs  config.rs  google_oauth.rs  handler.rs  main.rs  model.rs  user_repo.rs
apps/server/src/graph/: mod.rs  person.rs  schema.rs
apps/server/src/handlers/: auth.rs  common.rs  handlers.rs  mod.rs  model.rs  oauth.rs
apps/server/src/repo/: mod.rs  user.rs
