[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "migrate", "uuid", "time", "chrono"] }
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
jsonwebtoken = "9"
bcrypt = "0.15"
cargo-watch = "8.5.3"
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
reqwest = { version = "0.12.15", features = ["json"] }
actix-files = "0.6.6"
